tests/general/phase0/ssz_generic/basic_vector/invalid/vec_uint256_1_random_one_byte_more/serialized.ssz
КЅ#юРАЯЫџSxЯ2МЇ!|тбIУx/»•